--- a/csr-template.conf
+++ b/csr-template.conf
@@ -8,9 +8,9 @@ keyUsage = nonRepudiation, digitalSignature, keyEncipherment
 extendedKeyUsage = serverAuth
 subjectAltName = @alt_names
 [alt_names]
-DNS.1 = ${VAULT_SERVICE}
-DNS.2 = ${VAULT_SERVICE}.${VAULT_NAMESPACE}
-DNS.3 = ${VAULT_SERVICE}.${VAULT_NAMESPACE}.svc
-DNS.4 = ${VAULT_SERVICE}.${VAULT_NAMESPACE}.svc.cluster.local
+DNS.1 = ${V_SERVICE}
+DNS.2 = ${V_SERVICE}.${V_NAMESPACE}
+DNS.3 = ${V_SERVICE}.${V_NAMESPACE}.svc
+DNS.4 = ${V_SERVICE}.${V_NAMESPACE}.svc.cluster.local
 IP.1 = 127.0.0.1
 
