--- a/csr-resource-template.yaml
+++ b/csr-resource-template.yaml
@@ -2,11 +2,11 @@
 apiVersion: certificates.k8s.io/v1
 kind: CertificateSigningRequest
 metadata:
-  name: ${CSR_NAME}
+  name: ${V_CSR_NAME}
 spec:
   groups:
   - system:authenticated
-  request: $(cat ${TMPDIR}/server.csr | base64 | tr -d '\r\n')
+  request: ${SERVER_CSR}
   signerName: kubernetes.io/kubelet-serving     ## Confirm this is the right value for your Kubernetes implementation
   usages:
   - digital signature
