--- a/config-vault-redis-enterprise.template
+++ b/config-vault-redis-enterprise.template
@@ -2,17 +2,17 @@
 
 ## From https://github.com/RedisLabs/redis-enterprise-k8s-docs/tree/master/vault#deploying-the-operator
 vault policy write "${V_SECRET_PREFIX}" - <<EOF
-path "secret/data/"${V_SECRET_PREFIX}"/*" {
+path "secret/data/${V_SECRET_PREFIX}/*" {
   capabilities = ["create", "read", "update", "delete", "list"]
 }
-path "secret/metadata/"${V_SECRET_PREFIX}"/*" {
+path "secret/metadata/${V_SECRET_PREFIX}/*" {
   capabilities = ["list"]
 }
 EOF
 
-vault write auth/kubernetes/role/"redis-enterprise-operator-${RE_NAMESPACE}" \
+vault write auth/kubernetes/role/"redis-enterprise-operator-${REC_NAMESPACE}" \
         bound_service_account_names="redis-enterprise-operator"  \
-        bound_service_account_namespaces="${RE_NAMESPACE}" \
+        bound_service_account_namespaces="${REC_NAMESPACE}" \
         policies="${V_SECRET_PREFIX}" \
         ttl=24h
 
