--- a/csr.template
+++ b/csr.template
@@ -1,16 +1,17 @@
 [req]
 req_extensions = v3_req
-distinguished_name = req_distinguished_name
-[req_distinguished_name]
-[ v3_req ]
+distinguished_name = distinguished_name_req
+prompt=no
+[distinguished_name_req]
+[v3_req]
 basicConstraints = CA:FALSE
 keyUsage = nonRepudiation, digitalSignature, keyEncipherment
 extendedKeyUsage = serverAuth
 subjectAltName = @alt_names
 [alt_names]
-DNS.1 = ${V_SERVICE}
-DNS.2 = ${V_SERVICE}.${V_NAMESPACE}
-DNS.3 = ${V_SERVICE}.${V_NAMESPACE}.svc
-DNS.4 = ${V_SERVICE}.${V_NAMESPACE}.svc.cluster.local
+DNS.1 = ${SERVICE}
+DNS.2 = ${SERVICE}.${NAMESPACE}
+DNS.3 = ${SERVICE}.${NAMESPACE}.svc
+DNS.4 = ${SERVICE}.${NAMESPACE}.svc.cluster.local
+DNS.5 = *.${SERVICE}.${NAMESPACE}.svc.cluster.local
 IP.1 = 127.0.0.1
-
